# boss-query-optimizer

./: CMakeLists.txt  README.md
libgpdbcost/: CMakeLists.txt
libgpopt/: CMakeLists.txt
libgpoptextender/: CMakeLists.txt
libgpoptextender/include/gpoptextender/: BOSSCostModel.hpp  CEnfdEngine.hpp  CEngineSpec.hpp  CEngineSpecAny.hpp  CEngineSpecGP.hpp  CPhysicalEngineTransition.hpp  CPhysicalGP.hpp  DynamicOperatorArgs.hpp  DynamicOperatorRegistry.hpp  Engine.hpp  IDynamicOperatorRegistry.hpp
libgpoptextender/include/gpoptextender/CostModel/: BOSSCostModel.hpp
libgpoptextender/include/gpoptextender/DynamicRegistry/: DynamicOperatorArgs.hpp  DynamicRegistry.hpp  IDynamicRegistry.hpp
libgpoptextender/include/gpoptextender/EngineInterface/: Engine.hpp
libgpoptextender/include/gpoptextender/EngineProperty/: CBasePhysicalUnaryOp.hpp  CEnfdEngine.hpp  CEngineSpec.hpp  CPhysicalEngineTransition.hpp  EEngineType.hpp
libgpoptextender/include/gpoptextender/GenericOps/: CBaseLogicalOp.hpp  CBasePhysicalUnaryOp.hpp
libgpoptextender/include/gpoptextender/Translation/: B2CConverter.hpp  C2BConverter.hpp  Converter.hpp
libgpoptextender/src/gpoptextender/: BOSSCostModel.cpp  CEnfdEngine.cpp  CEngineSpec.cpp  CPhysicalEngineTransition.cpp  CPhysicalGP.cpp  DynamicOperatorRegistry.cpp  IDynamicOperatorRegistry.cpp
libgpoptextender/src/gpoptextender/CostModel/: BOSSCostModel.cpp
libgpoptextender/src/gpoptextender/DynamicRegistry/: DynamicRegistry.cpp  IDynamicRegistry.cpp
libgpoptextender/src/gpoptextender/EngineProperty/: CBasePhysicalUnaryOp.cpp  CEnfdEngine.cpp  CEngineSpec.cpp  CPhysicalEngineTransition.cpp  EEngineType.cpp
libgpoptextender/src/gpoptextender/GenericOps/: CBaseLogicalOp.cpp  CBasePhysicalUnaryOp.cpp
libnaucrates/: CMakeLists.txt
(+144 files in other folders)
